Fix documentation header height on mobile

--- a/src/public/styles/docs.css
+++ b/src/public/styles/docs.css
@@ -7,6 +7,8 @@
   padding: 2.5em 1em 1.5em;
   color: #fff;
   font-weight: 300;
+  position: relative;
+  bottom: -23px;
 }
 
 .title-header {
@@ -60,6 +62,7 @@ pre {
   }
 
   .doc-header h1 {
+    bottom: 0;
     padding: 2.5em 0 1.5em;
   }
 
